Fixed collapse

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -36,7 +36,7 @@
 }
 
 .card-content {
-  padding: 0rem 1rem;
+  padding: 0.75rem;
 }
 
 .card-actions {
